@@ -284,6 +284,7 @@ static void account_edit_create(void)
 	GtkWidget *del_btn;
 	GtkWidget *up_btn;
 	GtkWidget *down_btn;
+	GtkWidget *image;
 
 	GtkWidget *default_btn;
 
@@ -417,13 +418,19 @@ static void account_edit_create(void)
 	g_signal_connect (G_OBJECT(del_btn), "clicked",
 			  G_CALLBACK (account_delete), NULL);
 
-	down_btn = gtk_button_new_from_stock (GTK_STOCK_GO_DOWN);
+	down_btn = gtk_button_new ();
+	image = gtk_image_new_from_stock (GTK_STOCK_GO_DOWN, GTK_ICON_SIZE_BUTTON);
+	gtk_widget_show (image);
+	gtk_button_set_image (GTK_BUTTON(down_btn), image);
 	gtk_widget_show (down_btn);
 	gtk_box_pack_end (GTK_BOX (vbox2), down_btn, FALSE, FALSE, 4);
 	g_signal_connect (G_OBJECT(down_btn), "clicked",
 			  G_CALLBACK (account_down), NULL);
 
-	up_btn = gtk_button_new_from_stock (GTK_STOCK_GO_UP);
+	up_btn = gtk_button_new ();
+	image = gtk_image_new_from_stock (GTK_STOCK_GO_UP, GTK_ICON_SIZE_BUTTON);
+	gtk_widget_show (image);
+	gtk_button_set_image (GTK_BUTTON(up_btn), image);
 	gtk_widget_show (up_btn);
 	gtk_box_pack_end (GTK_BOX (vbox2), up_btn, FALSE, FALSE, 4);
 	g_signal_connect (G_OBJECT(up_btn), "clicked",
