@@ -1,3 +1,8 @@
+2011-06-09
+
+	* src/account_dialog.c
+	  src/prefs_filter.c: fixed duplicated keyboard accelerators.
+
 2011-06-08
 
 	* libsylph/procmsg.[ch]
